Lots of changes, faster EMIT